logs/bentodev.log
Listing '.'...
Listing './bin'...
Compiling './bin/sassc.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Babel-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.1.dist-info'...
Listing './lib/python3.5/site-packages/GitPython-2.1.3.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.9.6.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Unidecode-0.04.20.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.12.1.dist-info'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/babel'...
Listing './lib/python3.5/site-packages/babel/locale-data'...
Listing './lib/python3.5/site-packages/babel/localtime'...
Listing './lib/python3.5/site-packages/babel/messages'...
Listing './lib/python3.5/site-packages/bentodev'...
Listing './lib/python3.5/site-packages/bentodev/config'...
Listing './lib/python3.5/site-packages/bentodev/setup_files'...
Listing './lib/python3.5/site-packages/bentodev/templates'...
Listing './lib/python3.5/site-packages/bentodev/templates/jinja2'...
Listing './lib/python3.5/site-packages/bentodev/templates/jinja2/macros'...
Listing './lib/python3.5/site-packages/bentodev/utils'...
Listing './lib/python3.5/site-packages/bentodev-0.1.16-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/libsass-0.12.3.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/money'...
Listing './lib/python3.5/site-packages/money-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.2.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/idna'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.13.0.dist-info'...
Listing './lib/python3.5/site-packages/sassutils'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools-35.0.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.10.0.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
